Update: base component logic and convert class

--- a/frontend/src/app/pages/convert/convert.component.html
+++ b/frontend/src/app/pages/convert/convert.component.html
@@ -1,1 +1,11 @@
-<p>convert works!</p>
+<app-select
+  [options]="converterTypes"
+  [(value)]="selectedConverter"
+  (valueChange)="onSelectConverterChange($event)"
+></app-select>
+
+
+<app-textarea [(value)]="originalValue" (valueChange)="onTextAreaChange($event)"></app-textarea>
+<app-textarea [(value)]="convertedValue" [readonly]="true" ></app-textarea>
+
+
