update docs/meta data

--- a/frontend/src/app/pages/docs/docs.component.html
+++ b/frontend/src/app/pages/docs/docs.component.html
@@ -1,2 +1,2 @@
 <p>this page is created with angular 18!</p>
-<p>originally created with nextjs 12</p>
+<p>originally created with nextjs 12. <a href="https://sarcasm-type-murex.vercel.app/" target="_blank">click here</a> to see the original version.</p>
