--- a/frontend/src/app/pages/convert/convert.component.html
+++ b/frontend/src/app/pages/convert/convert.component.html
@@ -2,7 +2,7 @@
 
   <div class="header">
     <div>
-      <h1>Text converter</h1>
+      <h1>Text modifier</h1>
     </div>
 
     <div class="mode">
